Fix broken layout (editor)

--- a/src/app/blog/edit/[slug]/page.module.scss
+++ b/src/app/blog/edit/[slug]/page.module.scss
@@ -9,7 +9,7 @@ $layout-threshold: 1000px;
   }
   .editor_block {
     border-radius: var(--window-border-radius) 10px 10px
-      var(--window-border-radius);
+      var(--window-border-radius) !important;
   }
   .article_header {
     border-radius: 10px var(--window-border-radius) 10px 10px;
@@ -51,7 +51,7 @@ $layout-threshold: 1000px;
 .editor_block {
   display: block;
   padding: 1rem;
-  position: sticky;
+  position: sticky !important;
   box-sizing: border-box;
   top: calc(var(--header-height) + 0.8rem);
   height: calc(100vh - var(--header-height) - 2 * 0.8rem);
